create validation erros and tooltops in page register

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,8 +31,10 @@
     "rules": {
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
+      "no-unused-expressions": "off",
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
       "import/prefer-default-export": "off",
+      "react/jsx-props-no-spreading": "off",
       "import/extensions": [
         "error",
         "ignorePackages",
