--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@types/styled-components": "^5.1.3",
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
+    "axios": "^0.21.0",
     "polished": "^3.6.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2",
+    "uuidv4": "^6.2.5",
     "yup": "^0.29.3"
   },
   "scripts": {
@@ -41,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.6",
     "@types/yup": "^0.29.8",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
